# moseq-tools

./: pyproject.toml
moseq_tools/: generate_meta_clustering_features.py  meta_cluster_syllable_ids.py  syllable_library.py
