[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moseq_tools"
version = "0.2.8"
description = "MoSEQ utilities"
dependencies = [
    "pyyaml",
    "ruamel.yaml",
    "click",
    "h5py",
    "joblib",
    "numpy",
    "toolz",
    "scipy",
    "pandas",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moseq_tools*"]

# Put data files *inside* the package and list them here:
[tool.setuptools.package-data]
"moseq_tools" = ["data/*.yaml"]


[project.scripts]
apply_path = "moseq_tools.config:apply_path"
merge-syllables = "moseq_tools.merge_syllables:main"
detect-empty-frames = "moseq_tools.detect_empty_frames:main"
cosine-dist="moseq_tools.cosine_dist:main"
frame-flip-qc="moseq_tools.frame_flip_qc:main"
slice-dataframe="moseq_tools.slice_dataframe:main"
hdf5_extract="moseq_tools.hdf5_extract:main"
generate_moseq_configs="moseq_tools.generate_moseq_configs:cli"
merge_treatments="moseq_tools.merge_treatments:main"
merge_treatment_from_yaml="moseq_tools.merge_treatment_from_yaml:main"

